...
          content: Form(
            key: _formKey,
            child: Column(
              mainAxisSize: MainAxisSize.min,
              children: <Widget>[
                TextFormField(
                  decoration: InputDecoration(labelText: 'Email'),
                  validator: (value) {
                    if (value!.isEmpty || !value.contains('@')) {
                      return 'Please enter your email address';
                    }
                    return null;
                  },
...
                                      onSaved: (input) => _password = input!,
                                      decoration: InputDecoration(
                                        border: OutlineInputBorder(
                                          borderRadius:
                                              BorderRadius.circular(8.0),
                                        ),
                                        labelText: 'Password',
                                        hintText: 'Enter your your Password',
                                        prefixIcon: Icon(Icons.lock),
                                        suffixIcon: Icon(Icons.check),
                                      ),
                                      style: TextStyle(fontSize: 16.0),
                                      obscureText: true,
...
                                                );
                                              },
                                            );
                                          });
                                        }
                                      },
                                      child: Text('Log In'),
                                    ),
                                  ),
                                  SizedBox(
                                    height: 110,
                                  ),
                                  TextButton(
...
