...
                        ),
                        Container(
                          width: double.infinity,
                          height: 50,
                          margin: EdgeInsets.symmetric(horizontal: 5.0),
                          child: ElevatedButton(
                            child: Text("View More",
                                style: TextStyle(
                                    color: Colors.white,
                                    fontSize: 15,
                                    fontFamily: "Helvetica")),
                            onPressed: () {
                              Navigator.push(
...
